Support more authentication option (publickey and password)

--- a/src/protocol/ssh/src/main/resources/org/dreamcat/jmeter/protocol/ssh/sampler/SSHSFTPSamplerResources_fr.properties
+++ b/src/protocol/ssh/src/main/resources/org/dreamcat/jmeter/protocol/ssh/sampler/SSHSFTPSamplerResources_fr.properties
@@ -15,27 +15,32 @@
 # limitations under the License.
 #
 
-displayName=SSH-SFTP
-username.displayName=Nom d'utilisateur
-username.shortDescription=Nom d'utilisateur pour serveur d'accès
+displayName=Commande SFTP
+username.displayName=Utilisateur
+username.shortDescription=Nom d'utilisateur utilis\u00e9 pour se connecter au serveur
 password.displayName=Mot de passe
-password.shortDescription=Mot de passe pour un serveur d'accès
-hostname.displayName=Nom ou IP du serveur
-hostname.shortDescription=Serveur à connecter
+password.shortDescription=Mot de passer utilis\u00e9 pour se connecter au serveur
+hostname.displayName=Serveur
+hostname.shortDescription=Nom ou IP du serveur
 port.displayName=Port
-port.shortDescription=Le sshd est sur écoute
-source.displayName=Source path
-source.shortDescription=Trajet source de transmission (peut être local ou sur le serveur)
-connectionTimeout.displayName=Connexion
-connectionTimeout.shortDescription=Temps d'attente (ms) avant l'échec de la connexion
-destination.displayName=Chemin cible
-destination.shortDescription=Trajet cible de transmission (peut être un trajet local ou un trajet sur le serveur)
-fileTransfer.displayName=Documentation Multiplier
-action.displayName=Mesures à prendre
-action.shortDescription=Sélectionnez la commande SFTP à envoyer
+port.shortDescription=Port de connexion au serveur SSH
+source.displayName=Chemin source
+source.shortDescription=Chemin source du transfert de fichier (peut-\u00eatre local ou sur le serveur)
+sshkeyfile.displayName=Fichier de clef SSH
+sshkeyfile.shortDescription=Fichier contenant votre clef SSH (id_dsa)
+passphrase.displayName=Passphrase
+passphrase.shortDescription=id_dsa passphrase (Attention: Cleartext)
+connectionTimeout.displayName=Expiration de la connexion
+connectionTimeout.shortDescription=Temps a attendre avent de couper la connexion (ms)
+destination.displayName=Chemin de destination
+destination.shortDescription=Destination du transfert de fichier (peut-\u00eatre local ou sur le serveur)
+fileTransfer.displayName=Transfert de fichier
+action.displayName=Action
+action.shortDescription=S\u00e9lectionnez la commande SFTP a \u00e9x\u00e9cuter
 get.displayName=GET
 put.displayName=PUT
 server.displayName=Serveur
-user.displayName=Configuration de connexion
-printFile.displayName=Imprimer le contenu du fichier
-printFile.shortDescription=Lire un fichier et afficher le texte dans le résultat
+user.displayName=Connexion
+keyFile.displayName=Certificat client
+printFile.displayName=Afficher le contenu du fichier
+printFile.shortDescription=Lire le fichier et afficher le r\u00e9sultat dans la sortie
